updates to index

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Glare Finance",
-  "name": "Glare Finance App Built on Serum DEX",
+  "name": "Glare Finance built on Serum DEX",
   "icons": [
     {
       "src": "favicon.ico",
