--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^14.11.4",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
+    "allow-cors": "^1.0.0",
     "antd": "^4.6.0",
     "bn.js": "^5.1.3",
     "cors": "^2.8.5",
