--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_EXCLUDE_MARKETS=['BTC']
+REACT_APP_EXCLUDE_MARKETS=[]
 REACT_APP_USDT_REFERRAL_FEES_ADDRESS='GsyaFt4MuMtV8FnkCeWWkxt4XrwpU1hxKYRhZfbMeUeU'
 REACT_APP_USDC_REFERRAL_FEES_ADDRESS='E4QUwT3z14UK6rB4g4zVtWhncT9Ssie4ehyCcPqYQBAE'
 
